--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
   "homepage": "https://github.com/alwleedamado/query-string-chief#readme",
   "dependencies": {
     "esbuild": "0.17.18"
+  },
+  "devDependencies": {
+    "esbuild-jest": "^0.5.0"
   }
 }
